include/vcl/vcllayout.hxx
@@ -109,6 +109,8 @@ public:
 
     virtual SalLayoutGlyphs GetGlyphs() const;
 
+    virtual bool IsMultiSalLayout() const;
+
 protected:
     // used by layout engines
     SalLayout();
