vcl/inc/sallayout.hxx
@@ -86,6 +86,8 @@ public:
                                           vcl::text::ImplLayoutArgs& rMultiArgs,
                                           const double* pMultiDXArray);
 
+    virtual bool    IsMultiSalLayout() const override;
+
     virtual         ~MultiSalLayout() override;
 
 private:
